===============================================================================
$Id$
$URL$
===============================================================================
New Checkin: mlevy
Date:        12 Nov 2012
Summary:     Added vmix_shear.F90, I think the structure is there for PP mixing
             (will test in POP, but that requires more POP infrastructure
             changes). New tag coming after POP work is complete.

Files Modified:
A       src/shared/vmix_shear.F90
M       src/shared/vmix_kinds_and_types.F90

===============================================================================
New Checkin: mlevy
Date:        5 Nov 2012
Summary:     Updated makefile to error out if VMIX_DRIVER is not found.

Files Modified:
M       bld/Makefile

===============================================================================
New Checkin: mlevy
Date:        16 Oct 2012
Summary:     Updated makefile to use proper tags for xlf90 compiler

Files Modified:
M       bld/Makefile

===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    30 Sep 2012
Tag Name:    cvmix_20120930
Tag Summary: A lot of restructuring / one new feature. The executable is now
             build in $CVMix/bld/exe/ instead of $CVMix/exe/; there are now
             multiple stand-alone drivers, and you must specify which one to
             use when you build the code. All the *.o and *.mod files are put
             in $CVMix/bld/obj/, rather than the .o files in $CVMix/bld/ and
             the .mod files in whatever directory you ran `make` from. If you
             have protex installed, you can generate the in-source protex
             documentation by running `$CVMix/doc/make_protex_file`. I also
             deleted the $CVMix/ncl/ directory in favor of keeping the ncl
             files in the reg_tests/ subdirectory that actually calls them.
