@@ -4,6 +4,16 @@ $URL$
 ===============================================================================
 New Checkin: mlevy
 Date:        12 Nov 2012
+Summary:     gfortran barked about declaring pointers inside datatypes
+             (something I meant to remove before committing -- the IBM compiler
+             is okay with it, but I'm not using pointers there anyway)
+
+Files Modified:
+M       src/shared/vmix_kinds_and_types.F90
+
+===============================================================================
+New Checkin: mlevy
+Date:        12 Nov 2012
 Summary:     Added vmix_shear.F90, I think the structure is there for PP mixing
              (will test in POP, but that requires more POP infrastructure
              changes). New tag coming after POP work is complete.
